# deedlit.dev

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  PERSISTENCE_ORM_GUIDE.md  README.md  docker-compose.yml  mprocs.prod.yaml  mprocs.yaml  package-lock.json  package.json
.claude/: launch.json  settings.json
.design-sync/: NOTES.md  config.json  conventions.md
.github/: copilot-instructions.md
.github/workflows/: publish-ui.yml  storybook-pages.yml
contracts/: AGENTS.md  README.md  api.openapi.yaml  catalog.openapi.yaml  graph.openapi.yaml  ingest.openapi.yaml  metadata.openapi.yaml  search.openapi.yaml  validate.py  vision.openapi.yaml
deedlit.api/: .env  AGENTS.md  Dockerfile  app.py  clients.py  mcp.py  pyproject.toml
deedlit.api/tests/: test_activity.py  test_folders.py  test_gateway.py  test_health.py  test_notes_collections.py
deedlit.catalog/: .env  AGENTS.md  Dockerfile  alembic.ini  app.py  pyproject.toml
deedlit.catalog/alembic/: env.py
deedlit.catalog/alembic/versions/: 0001_catalog_baseline.py  0002_image_safety.py  0003_source_folders.py  0004_tasks.py  0005_jobs_settings.py  0006_images_directory.py
deedlit.catalog/catalog/: __init__.py  config.py  db.py  migrations.py  object_store.py  repository.py  routers.py  schemas.py
deedlit.catalog/migration/: __init__.py  curation_migrate.py
deedlit.catalog/tests/: conftest.py  test_catalog.py  test_curation_migrate.py  test_folders.py  test_image_patch.py  test_jobs.py  test_migration.py  test_settings.py  test_tasks.py
deedlit.dev/: .cursorrules  .dockerignore  .gitignore  AGENTS.md  Dockerfile  next.config.ts  package.json  tsconfig.tsbuildinfo
deedlit.dev.comfyhelper/: .env.example  .gitignore  AGENTS.md  Dockerfile  IMAGE_LIBRARY.md  README.md  debug-page.spec.ts  docker-compose.yml  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.unit.config.ts  playwright.verify.config.ts  prisma.config.ts  quick-verify.spec.ts  tsconfig.json  verify-gallery-fix.spec.ts  verify-gallery-fixed.mjs  verify-gallery.mjs
deedlit.dev.comfyhelper/.github/: copilot-instructions.md
deedlit.dev.comfyhelper/app/: globals.css  layout.tsx
deedlit.dev.comfyhelper/components/: ActivityDock.tsx  ActivityToasts.tsx  AppSidebar.tsx  DirectoryPicker.tsx  PathInput.tsx  ServiceStatusBoard.tsx  SourceFoldersPanel.tsx  StandaloneImageModal.tsx  TagSelect.tsx  ThemeToggleButton.tsx
deedlit.dev.comfyhelper/lib/: api-client.ts  collections-store.ts  config-store.ts  format-utils.ts  gallery-types.ts  image-cache-store.ts  image-trash.ts  image-utils.ts  json-utils.ts  library-scanner.ts  library-types.ts  logger.ts  metadata-insights.ts  metadata-parsing.ts  metadata-utils.ts  notes-export.ts  notes-store.ts  notes-types.ts  path-tree-utils.ts  path-utils.ts  png-metadata.ts  prompt-statistics-cache.ts  prompt-statistics.ts  prompt-tags.ts  schemas.ts  storage-paths.ts  tag-filter-utils.ts  time-utils.ts
deedlit.dev.comfyhelper/prisma/: schema.prisma
deedlit.dev.comfyhelper/scripts/: prepare-standalone.mjs  start-production.mjs
deedlit.dev.ui/: .gitignore  AGENTS.md  README.md  package.json  tsconfig.build.json  tsconfig.json
deedlit.dev.ui/.github/: copilot-instructions.md
deedlit.dev.ui/.storybook/: main.ts  preview.css  preview.tsx
deedlit.dev.ui/scripts/: fix-esm-imports.mjs
deedlit.dev.ui/src/: ActivityDock.tsx  Checkbox.stories.tsx  Checkbox.tsx  CodeBlock.stories.tsx  CodeBlock.tsx  Collapsible.tsx  CollapsiblePanel.stories.tsx  CollapsiblePanel.tsx  CompareTrayBar.tsx  ConfirmationDialog.stories.tsx  ConfirmationDialog.tsx  CopyButton.stories.tsx  CopyButton.tsx  CyberPanels.stories.tsx  CyberPanels.tsx  Dialog.stories.tsx  Dialog.tsx  DirectoryPicker.tsx  DockPanel.stories.tsx  DockPanel.tsx  DropdownMenu.stories.tsx  DropdownMenu.tsx  EmptyState.stories.tsx  EmptyState.tsx  FilterSelectionCard.stories.tsx  FilterSelectionCard.tsx  Gallery.stories.tsx  Gallery.tsx  Icons.stories.tsx  Icons.tsx  InfoChip.stories.tsx  InfoChip.tsx  Introduction.mdx  KeyValueField.stories.tsx  KeyValueField.tsx  MediaStage.stories.tsx  MediaStage.tsx  MetadataInfoBlock.stories.tsx  MetadataInfoBlock.tsx  MetadataTabBar.stories.tsx  (+46 more)
deedlit.dev.ui/styles/: styles.css
deedlit.dev/.github/: copilot-instructions.md
deedlit.graph/: .env  AGENTS.md  Dockerfile  app.py  pyproject.toml
deedlit.graph/graph/: __init__.py  config.py  db.py  models.py  rebuild.py  repository.py  routers.py
deedlit.graph/tests/: conftest.py  test_graph.py
deedlit.ingest/: .env  AGENTS.md  Dockerfile  app.py  broker.py  config.py  fs_browse.py  job_ledger.py  jobs.py  ledger.py  pipeline.py  pyproject.toml  settings_client.py  worker.py
deedlit.ingest/tests/: conftest.py  test_async_queue.py  test_config.py  test_dag_queues.py  test_dag_stages.py  test_folder_scheduler.py  test_fs_browse.py  test_ingest.py  test_job_persistence.py  test_maintenance.py  test_reconcile.py  test_stage_tracking.py
deedlit.labelagent/: .env  AGENTS.md  Dockerfile  agent.py  app.py  config.py  pyproject.toml
deedlit.labelagent/tests/: test_describe.py  test_downscale.py  test_health.py
deedlit.metadata/: .env  AGENTS.md  Dockerfile  activity.py  app.py  extract.py  metadata_parsing.py  png_metadata.py  prompt_tags.py  pyproject.toml
deedlit.metadata/tests/: conftest.py  test_extract.py  test_metadata_parsing.py  test_png_metadata.py  test_prompt_tags.py  test_references.py
deedlit.search/: .env  AGENTS.md  Dockerfile  app.py  id_scheme.py  pyproject.toml
deedlit.search/search/: __init__.py  config.py  rebuild.py  schemas.py  store.py
deedlit.search/tests/: conftest.py  test_rebuild.py  test_search.py
deedlit.vision/: .env  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  pyproject.toml
deedlit.vision/static/: index.html
deedlit.vision/tests/: test_dense_batch.py  test_id_scheme.py  test_sparse.py
docs/: AGENTS.md
docs/agents/: domain.md  (+2 more)
id-scheme/: AGENTS.md  README.md  vectors.json
observability/: AGENTS.md
(+220 files in other folders)
