[project]
name = "deedlit-api"
version = "0.1.0"
description = "deedlit.api — BFF gateway aggregating catalog/search/graph + MCP + job dispatch (no DB)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.27.0",
    # FastAPI multipart form parsing — required by POST /search/by-image's
    # UploadFile/Form params (reverse-image search). Without it FastAPI raises at
    # request time ("Form data requires python-multipart to be installed").
    "python-multipart>=0.0.9",
    # OpenTelemetry: zero-code tracing via `opentelemetry-instrument`. Exports
    # OTLP/http to Tempo (see OTEL_* env / dev:api script). httpx instrumentation
    # traces the gateway's calls to the owning services.
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
