[project]
name = "deedlit-catalog"
version = "0.1.0"
description = "deedlit.catalog — source-of-truth catalog over Postgres + RustFS (stub)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2",
    "psycopg[binary]>=3.1.0",
    "boto3>=1.34.0",
    # OpenTelemetry: zero-code tracing via `opentelemetry-instrument`. Exports
    # OTLP/http to Tempo (see OTEL_* env / dev:catalog script).
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-psycopg>=0.48b0",
    "opentelemetry-instrumentation-botocore>=0.48b0",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
