[project]
name = "deedlit-graph"
version = "0.1.0"
description = "deedlit.graph — relationship graph over Neo4j (stub)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
