[project]
name = "deedlit-ingest"
version = "0.1.0"
description = "deedlit.ingest — stateless ingest/index worker (no DB) (stub)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "imagehash>=4.3.1",
    "python-multipart>=0.0.9",
    # OpenTelemetry: zero-code tracing via `opentelemetry-instrument`. Exports
    # OTLP/http to Tempo (see OTEL_* env / dev:ingest script). httpx instrumentation
    # traces the fan-out calls to catalog/search/graph/metadata/vision.
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
