[project]
name = "deedlit-labelagent"
version = "0.1.0"
description = "deedlit.labelagent — Agno AgentOS image-labeling/description agent (vision LLM on a local llama-server)."
requires-python = ">=3.11"
dependencies = [
    # Agno agent framework + AgentOS runtime. `agno[os]` pulls the OS server
    # extras (FastAPI/uvicorn); `openai` is the OpenAI-compatible client used by
    # the LlamaCpp/OpenAILike model to talk to the local llama-server /v1 API.
    "agno>=1.0.0",
    "openai>=1.0.0",
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0",
    # Pillow downscales + WebP-recompresses each image before it reaches the
    # vision LLM, shrinking the per-image context (see app._downscale_for_vlm).
    "pillow>=10.0.0",
    # OpenTelemetry: zero-code tracing via `opentelemetry-instrument` (same as
    # the sibling services). httpx instrumentation traces the llama-server calls.
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
