[project]
name = "deedlit-vision-local"
version = "0.1.0"
description = "Simple local FastAPI app with browser pages and JSON endpoints."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.27.0",
    "open-clip-torch>=2.24.0",
    "pillow>=10.0.0",
    "pydantic>=2.11.0",
    "python-multipart>=0.0.9",
    "safetensors>=0.4.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "transformers>=4.40.0",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
