[project]
name = "deedlit-vision-local"
version = "0.1.0"
description = "Simple local FastAPI app with browser pages and JSON endpoints."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "fastembed>=0.4.0",
    "httpx>=0.27.0",
    "open-clip-torch>=2.24.0",
    "pillow>=10.0.0",
    "pydantic>=2.11.0",
    "python-multipart>=0.0.9",
    "safetensors>=0.4.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "transformers>=4.40.0",
    "uvicorn[standard]>=0.35.0",
    # OpenTelemetry: zero-code tracing via `opentelemetry-instrument`. Exports
    # OTLP/http to Tempo (see OTEL_* env / dev:vision script).
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
]

[tool.uv]
package = false

# RTX 50-series (Blackwell, sm_120) needs CUDA 12.8 wheels. Pull torch/torchvision
# from the cu128 index so local dev runs CLIP on the GPU. The Dockerfile installs
# its own CUDA wheels separately.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
